--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gedit
-pkgver=3.22.1+1+gd21912e3e
-pkgrel=1
+pkgver=3.28.0
+pkgrel=2
 pkgdesc="GNOME Text Editor"
 url="https://wiki.gnome.org/Apps/Gedit"
-arch=(i686 x86_64)
+arch=(x86_64)
 license=(GPL)
 depends=(gtksourceview3 gsettings-desktop-schemas libpeas gspell python-gobject dconf)
 makedepends=(yelp-tools intltool vala gobject-introspection gnome-common git gtk-doc)
 optdepends=('gedit-plugins: Additional features')
-groups=(gnome-extra)
-_commit=d21912e3e29a082461a49b2f6b5df579bb572cc6  # master
+groups=(gnome)
+_commit=304fb24331a097764a0db160fc95fb1b978f4106  # tags/3.28.0^0
 source=("git+https://git.gnome.org/browse/gedit#commit=$_commit"
         "git+https://git.gnome.org/browse/libgd")
 sha256sums=('SKIP'
